[package]
name = "discograph"
version = "0.2.0"
authors = ["Asher Baker <asherkin@limetech.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
ctrlc = "3"
lru = "0.6"
parking_lot = "0.11"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = "1"
serde_json = "1"
unicode-segmentation = "1"
tokio = { version = "0.2", features = ["macros", "rt-core", "process"] }
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "mysql"] }
twilight-command-parser = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-gateway = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-http = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-model = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
