[package]
name = "discograph"
version = "0.2.0"
authors = ["Asher Baker <asherkin@limetech.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
ctrlc = "3"
futures = "0.3"
lru = "0.6"
parking_lot = "0.11"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
twilight-command-parser = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
unicode-segmentation = "1"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1", features = ["macros", "rt", "process"] }
