[package]
name = "discograph"
version = "0.3.0"
authors = ["Erin Baker <asherkin@limetech.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ctrlc = "3"
dbl-rs = "0.3"
futures = "0.3"
lru = "0.10"
parking_lot = "0.12"
rand = "0.8"
serde = "1"
serde_json = "1"
tracing = "0.1"
twilight-command-parser = "0.7"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
unicode-segmentation = "1"
anyhow = { version = "1", features = ["backtrace"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1", features = ["macros", "rt", "process"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
